css/parser/tests/charset.out
css/parser/tests/charset.css:4:10: error: invalid charset rule: expecting a double quoted string after "@charset"
    2 | @charset "UTF-8";
    3 | 
    4 | @charset 'utf-8';
      |          ~~~~~~~
    5 | 
    6 | @charset "ISO-12345"    ;
css/parser/tests/charset.css:4:10: error: invalid charset rule: expecting a double quoted string after "@charset"
    2 | @charset "UTF-8";
    3 | 
    4 | @charset 'utf-8';
      |          ~~~~~~~
    5 | 
    6 | @charset "ISO-12345"    ;
css/parser/tests/charset.css:6:25: error: the ";" has to be the next character after "ISO-12345"
    4 | @charset 'utf-8';
    5 | 
    6 | @charset "ISO-12345"    ;
      |                         ^
    7 | 
    8 | @charset "ASCII"
css/parser/tests/charset.css:10:1: error: expecting a semicolon to close the at-rule
    8 | @charset "ASCII"
    9 | 
   10 | .test {}
      | ^